--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "weatherapp",
   "version": "0.1.0",
-  "homepage": "https://myusername.github.io/weatherBoard",  "private": true,
+  "homepage": "https://kashishk58.github.io/weatherBoard/",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,7 +11,7 @@
     "fontawesome": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
